# fsr2_opengl_java

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: io_homo_superresolution_fsr2_nativelib_FSR2ApiHelper.h  io_homo_superresolution_fsr2_nativelib_ffx_fsr2_api.h  io_homo_superresolution_upscale_NativeApiHelper.h  pch.h  utils.h
src/: ffxFsr2.cpp  utils.cpp
src/ffx-fsr2-api/: CMakeLists.txt  ffx_fsr2.cpp
src/ffx-fsr2-api/gl/: CMakeLists.txt  ffx_fsr2_gl.cpp  ffx_fsr2_gl.h
src/ffx-fsr2-api/vk/: CMakeLists.txt  ffx_fsr2_vk.cpp
